packages/svelte/tests/compiler-errors/samples/empty-attribute-shorthand/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'empty-attribute-shorthand',
		message: 'Attribute shorthand cannot be empty',
		position: [6, 6]
	}
});
